syntax = "proto3";

package pb;

option go_package = "github.com/yushk/sport_backend/manager/pb;pb";

import "evaluate_info.proto";

message Solution {
    string id = 1;
    string title = 2;
    string work_id = 3;
    string student_id = 4;
    string student_name = 5;
    string content = 6;
    repeated EvaluateInfo evaluates_info = 7;
    int64 commit_time = 8;
    string desc = 9;
    repeated string teachers = 10;
}

service SolutionManager {
    rpc CreateSolution(CreateSolutionRequest) returns (Solution) {}
    rpc GetSolution(GetSolutionRequest) returns (Solution) {}
    rpc UpdateSolution(UpdateSolutionRequest) returns (Solution) {}
    rpc DeleteSolution(DeleteSolutionRequest) returns (Solution) {}
    rpc GetSolutions(GetSolutionsRequest) returns (GetSolutionsReply) {}
}

message CreateSolutionRequest {
    Solution data = 1;
}

message GetSolutionRequest {
    string id = 1;
}

message UpdateSolutionRequest {
    string id = 1;
    Solution data = 2;
}

message DeleteSolutionRequest {
    string id = 1;
}

message GetSolutionsRequest {
    string query = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message GetSolutionsReply {
    int64 total_count = 1;
    repeated Solution items = 2;
}